test/library/standard/Map/testBorrowedMap.good
testBorrowedMap.chpl:10: error: maps of non-nilable borrowed values are not currently supported
